--- a/BubbleSort/BubbleSort.vcxproj
+++ b/BubbleSort/BubbleSort.vcxproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <ClInclude Include="BubbleSort.h" />
     <ClInclude Include="Library.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
