--- a/BubbleSort/BubbleSort.vcxproj.filters
+++ b/BubbleSort/BubbleSort.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="BubbleSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
