--- a/BubbleSort/BubbleSort.vcxproj.filters
+++ b/BubbleSort/BubbleSort.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClInclude Include="StackChar7.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stack_class5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Stack_class5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
