--- a/BubbleSort/BubbleSort.vcxproj
+++ b/BubbleSort/BubbleSort.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="StackChar7.h" />
     <ClInclude Include="StackInt6.h" />
     <ClInclude Include="Library.h" />
+    <ClInclude Include="Stack_char8.h" />
     <ClInclude Include="Stack_class5.h" />
   </ItemGroup>
   <ItemGroup>
