--- a/BubbleSort/BubbleSort.vcxproj.filters
+++ b/BubbleSort/BubbleSort.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Stack_class5.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stack_char8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
